Client run (incompleted)